--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<style>
-  body{
-    font-size:40px;
-  }  
-</styles>
-
-<a href="web-1/index.html">1</a>
-<a href="web-2/index.html">2</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BCH Website</title>
+    <style>
+        body{
+            font-size: 40px;
+        }
+    </style>
+</head>
+<body>
+    <h1>BCH</h1><hr>
+    <h4>Websites</h4>
+    <ol>
+        <li><a href="web-1/index.html">1</a></li>
+        <li><a href="web-2/index.html">2</a></li>
+    </ol>
+</body>
+</html>
