--- a/web-3/index.html
+++ b/web-3/index.html
@@ -143,6 +143,9 @@
             display: flex;
             flex-direction: column;
         }
+		#showcase{
+			height:100vh
+		}
     
     }
     </style>
