--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="web-1/index.html">1</a></li>
         <li><a href="web-2/index.html">2</a></li>
         <li><a href="web-3/index.html">3</a></li>
+        <li><a href="web-4/index.html">4</a></li>
     </ol>
 </body>
 </html>
