--- a/web-4/index.html
+++ b/web-4/index.html
@@ -26,7 +26,7 @@
             <h1>VIJAY RESIDENCY</h1>
             <p>Discover our Luxury Rooms.</p>
         </div>
-        <div>
+        <div class="phone">
             <h4>+91 9032133357</h4>
             <h4>+91 9615534567</h4>
         </div>
