--- a/web-4/index.html
+++ b/web-4/index.html
@@ -31,5 +31,17 @@
             <h4>+91 9615534567</h4>
         </div>
     </section>
+    <section id="about">
+        <div class="about-a">
+            <h2>Stay, Relax & Enjoy Your Journey!</h2>
+            <p>Welcome to <b>Vijay Residency</b>, The best residency in Penukonda. Vijay Residency is the most preferred and best lodge in Penukonda, located near Y.S.R statue,Madakasira road Penukonda.
+               Easily accessible by all means of transport. Vijay Residency is an excellent lodge in penukonda with Deluxe A/C and Non-A/C well-furnished rooms which satisfy the needs of the business people and tourists at economical tariff with good service. </p>
+            <p>We have a set of friendly and professional staffs to make your stay comfortable. We give almost priority to the cleanliness of the room. It is the perfect destination for a safe and comfortable stay. We have no hidden costs. Feel at Home when u stay with us. We provide quality accommodation solutions for people on business and tourist travel. It is the best lodge in Penukonda and its suited for short and long stay, whether it is for the corporate executives on business or an individual/ couple/group on leisure travel. Our customers enjoy the homely atmosphere every time, that is our success, by making every stay a memorable one. </p>
+        </div>
+        <div class="about-b">
+            <img src="https://vijayresidency.ga/images/f_img_1.png" alt="VIJAY LODGE & RESIDENCY">
+        </div>
+    </section>
+
 </body>
 </html>
