--- a/web-4/index.html
+++ b/web-4/index.html
@@ -42,6 +42,17 @@
             <img src="https://vijayresidency.ga/images/f_img_1.png" alt="VIJAY LODGE & RESIDENCY">
         </div>
     </section>
+    <section id="rooms">
+        <h2>Featured Rooms</h2>
+        <div class="pics">
+            <img src="https://vijayresidency.ga/gallery/7.jpg" alt="ROOMS">
+            <p>DELUXE A/C from &#8377;799</p>
+            <img src="https://vijayresidency.ga/gallery/8.jpg" alt="ROOMS">
+            <p>DELUXE A/C from &#8377;999</p>
+         </div> 
+    </section>
+    <section id="servicse">
 
+    </section>
 </body>
 </html>
