--- a/web-5/index.html
+++ b/web-5/index.html
@@ -8,19 +8,54 @@
     <title>Albert Einstein</title>
 </head>
 <body>
-    <div class="landing" style="display: both;">
-        <div class="image">
-            <img src="ae.jpg" alt="Albert Einstein" class="ae">
+    <div class="showcase">
+        <div class="logo">
+            <div>
+                <img src="ae.jpg" alt="Albert Einstein">
+            </div>
         </div>
+
         <div class="title">
-            <h1>Albert Einstein</h1>
-            <p>Father Of Modern Physics</p>
+            <div>
+                <h1>Albert Einstein</h1>
+                <p>Father Of Modern Physics</p>
+            </div>
         </div>
     </div>
-    <section class="about">
-        <!--<h1>Quotes</h1>-->
-        <p>"I have no special talent. I am only passionately curious"</p>
-        <!-- <p>"We cannot solve our problems with the same thinking we used when we created them."</p> -->
+    <div class="section">
+        <section class="about">
+            <h2>About</h2>
+            <p>Albert Einstein, (born March 14, 1879, Ulm, Württemberg, Germany—died April 18, 1955,
+                Princeton, New Jersey, U.S.), German-born physicist who developed the special and 
+                general theories of relativity and won the Nobel Prize for Physics in 1921 for his 
+                explanation of the photoelectric effect. Einstein is generally considered the most 
+                influential physicist of the 20th century.
+            </p>
+            <a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank" class="read_more">Read More >></a>
+        </section>
+
+        <section class="contributions">
+            <h2>Contributions</h2>
+            <ol>
+                <li><a href="https://en.wikipedia.org/wiki/Special_relativity" target="_blank">Special Theory of Relativity</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/General_relativity" target="_blank">General Theory of Relativity</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Photoelectric_effect" target="_blank">The Photo Electric Effect</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Brownian_motion" target="_blank">Brownian Motion</a></li>
+            </ol>
+        </section>
+    </div>
+
+    <section class="quotes">
+        <h2>Quotes</h2><hr>
+        <p><q>I have no special talent. I am only passionately curious.</q></p><hr>
+        <p><q>Logic will get you from A to Z, imagination will get you everywhere.</q></p><hr>
+        <p><q>No problem can be solved from the same level of consciousness that created it.</q></p><hr>
+        <p><q>The true sign of intelligence is not knowledge but imagination.</q></p><hr>
+        <p><q>Imagination is everything. It is the preview of life’s coming attractions.</q></p><hr>
     </section>
+    
+    <footer>
+        <p>Albert Einstein. For <a href="https://freecodecamp.org" target="_blank">FreeCodeCamp</a>.</p>
+    </footer>
 </body>
 </html>
