--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <h1>BCH</h1><hr>
     <h4>Websites</h4>
     <ol>
-        <!--
+        
         <li><a href="web-1/index.html">1</a></li>
         <li><a href="web-2/index.html">2</a></li>
         <li><a href="web-3/index.html">3</a></li>
         <li><a href="web-4/index.html">4</a></li>
         <li><a href="web-5/index.html">5</a></li>
-        -->
-        <li><a href="paymenthistoryredirecturl.pdf" target="_blank">Pay</a></li>
+       
+<!--         <li><a href="paymenthistoryredirecturl.pdf" target="_blank">Pay</a></li> -->
     </ol>
 </body>
 </html>
