--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="web-3/index.html">3</a></li>
         <li><a href="web-4/index.html">4</a></li>
         <li><a href="web-5/index.html">5</a></li>
+         <li><a href="JNTU-R20-B.Tech_.-Mechnaical-Engineering-III-IV-Year-Course-structure-Syllabus.pdf">6-syllabus</a></li>
        
 <!--         <li><a href="paymenthistoryredirecturl.pdf" target="_blank">Pay</a></li> -->
     </ol>
